--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,5 @@
 html {
-    background-color: #F9FDFF
+    background-color: #F9FDFF;
 }
 body {
     font-family: 'Varela Round','Kiwi Maru', sans-serif;
